--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Carlos Augusto <carlosaugust.tech@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^17.0.36",
+    "@types/typescript": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "babel-eslint": "^10.1.0",
@@ -13,6 +15,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.2"
   }
 }
