--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "main": "index.js",
   "author": "Carlos Augusto <carlosaugust.tech@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "set NODE_ENV=test&&jest --runInBand --detectOpenHandles --no-cache"
+  },
   "devDependencies": {
+    "@types/jest": "^27.5.1",
     "@types/node": "^17.0.36",
     "@types/typescript": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -15,8 +19,12 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^28.1.0",
     "prettier": "^2.6.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "ts-jest": "^28.0.3"
   }
 }
