--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
       "no-empty-function": "off",
       "camelcase": "off",
       "no-restricted-syntax": "off",
-      "consistent-return": "off"
+      "consistent-return": "off",
+      "no-promise-executor-return": "off"
     }
   }
   
