--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,8 @@
       "no-restricted-syntax": "off",
       "consistent-return": "off",
       "no-promise-executor-return": "off",
-      "no-return-await": "off"
+      "no-return-await": "off",
+      "max-classes-per-file": "off"
     }
   }
   
