--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.36",
     "@types/typescript": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -25,6 +26,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
     "ts-jest": "^28.0.3"
   }
 }
