--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "set NODE_ENV=test&&jest --runInBand --detectOpenHandles --no-cache"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.5.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.36",
@@ -26,6 +27,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "ts-jest": "^28.0.3"
   }
