--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "Carlos Augusto <carlosaugust.tech@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn ./src/infra/http/server.ts",
     "test": "set NODE_ENV=test&&jest --runInBand --detectOpenHandles --no-cache"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.36",
@@ -28,6 +30,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "ts-jest": "^28.0.3"
   }
