--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "@prisma/client": "^3.14.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
